--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,11 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+# Local files
+## OS generated files
+## Uneccessary/local only resources & files
+.DS_Store
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
