--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,11 @@ MANIFEST
 ## OS generated files
 ## Uneccessary/local only resources & files
 .DS_Store
+WeatherPy-backup-test.ipynb
+coordinates_backup_list
+citipy-module-test.ipynb
+api_practice.ipynb
+random_numbers.ipynb
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
