update local ignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ api_practice.ipynb
 random_numbers.ipynb
 coordinates_backup_list
 config.py
-
+VacationPy.ipynb
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
