update local ignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ random_numbers.ipynb
 coordinates_backup_list
 config.py
 VacationPy.ipynb
+Google_Nearby_Search.ipynb
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
