add weather_database config

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ random_numbers.ipynb
 coordinates_backup_list
 config.py
 Google_Nearby_Search.ipynb
+Weather_Database/config.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
